pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/Fecha_de_emision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_emision__c</fullName>
    <description>Fecha en la que se generó y entregó el plástico.</description>
    <inlineHelpText>Fecha en la que se generó y entregó el plástico.</inlineHelpText>
    <label>Fecha_de_emision</label>
    <required>true</required>
    <type>Date</type>
</CustomField>