pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/Linea_Actual__c.field-meta.xml
<CustomField>
    <fullName>Linea_Actual__c</fullName>
    <description>Saldo o límite disponible de la tarjeta.</description>
    <inlineHelpText>Saldo o límite disponible de la tarjeta.</inlineHelpText>
    <label>Linea_Actual</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>