pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/Llave_Unica_Activa__c.field-meta.xml
<CustomField>
    <fullName>Llave_Unica_Activa__c</fullName>
    <externalId>true</externalId>
    <label>Llave_Unica_Activa</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>