pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/N_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>N_de_Tarjeta__c</fullName>
    <description>El PAN o número de plástico (16 dígitos). Encriptado o con seguridad a nivel de campo.</description>
    <inlineHelpText>El PAN o número de plástico.</inlineHelpText>
    <label>N_de_Tarjeta</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>