pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/NumeroTarjeta__c.field-meta.xml
<CustomField>
    <fullName>NumeroTarjeta__c</fullName>
    <displayFormat>4500{000000}</displayFormat>
    <label>NumeroTarjeta</label>
    <type>AutoNumber</type>
</CustomField>