pruebaFinal/force-app/main/default/objects/FinancialAccount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tipo de tarjeta adquirida.</description>
    <inlineHelpText>Tipo de tarjeta adquirida.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FinancialAccounts</relationshipLabel>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>